test_scores/negative_dimers/features/P02774.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P02774.pkl.xz